# funsim

./: AGENTS.md  CMakeLists.txt  README.md  death_log_civilziationupdate.csv
maps/: USA.fmap  europe.fmap  europe12.fmap
src/: app.cpp  app.h  factions.cpp  factions.h  humans.cpp  humans.h  main.cpp  overlays.h  render.cpp  render.h  settlements.cpp  settlements.h  tools.cpp  tools.h  ui.cpp  ui.h  util.cpp  util.h  world.cpp  world.h
